--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     implementation "androidx.appcompat:appcompat:1.1.0"
     implementation "com.intuit.sdp:sdp-android:1.0.6"
     implementation "com.intuit.ssp:ssp-android:1.0.6"
+    implementation "com.google.android.gms:play-services-ads:18.1.0"
 }
